dash: Increase stack size to 8 Mbytes on OS/2.
This is needed for e.g. the libtool configure as it seems to create
a here-doc which doesn't fit in 1 Mbyte of stack that dash has by
default.


git-svn-id: http://svn.netlabs.org/repos/ports/dash/trunk@1846 8d6eb4b1-0faa-de11-b929-00e081727c95

--- a/configure.ac
+++ b/configure.ac
@@ -84,6 +84,13 @@ AC_CHECK_DECL([PRIdMAX],,
 #include <inttypes.h>
 ])
 
+dnl Set system-specific linker options
+case `uname -s 2>/dev/null` in
+OS/2)
+	# Increase stack size to 8MB (1MB is not enough for big here docs)
+	export LDFLAGS="$LDFLAGS -Zstack 0x2000"
+esac
+
 dnl Checks for library functions.
 AC_CHECK_FUNCS(bsearch faccessat getpwnam getrlimit isalpha killpg \
 	       mempcpy \
